--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,16 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.1",
+    "@prisma/client": "^4.5.0",
+    "apollo-server-micro": "^3.11.1",
+    "graphql": "^16.6.0",
+    "micro-cors": "^0.1.1",
     "next": "13.0.0",
+    "nexus": "^1.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@types/node": "18.11.7",
+    "@types/micro-cors": "^0.1.2",
+    "@types/node": "^18.11.7",
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.0",
-    "typescript": "4.8.4"
+    "prisma": "^4.5.0",
+    "typescript": "^4.8.4"
   }
 }
