--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@apollo/client": "^3.7.1",
     "@prisma/client": "^4.5.0",
     "apollo-server-micro": "^3.11.1",
+    "bootstrap": "^5.2.2",
     "graphql": "^16.6.0",
     "micro-cors": "^0.1.1",
     "next": "13.0.0",
