--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,12 +13,14 @@
     "@prisma/client": "^4.5.0",
     "apollo-server-micro": "^3.11.1",
     "bootstrap": "^5.2.2",
+    "cuid": "^2.1.8",
     "graphql": "^16.6.0",
     "micro-cors": "^0.1.1",
     "next": "13.0.0",
     "nexus": "^1.3.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sass": "^1.56.1"
   },
   "devDependencies": {
     "@types/micro-cors": "^0.1.2",
